# pelican

./: .cproject  .gitignore  .project  ChangeLog.txt  LICENSE.md  README.md  copying.txt  index.html  install.txt  pelican.doxyfile  readme.txt
pelican/: .cproject  .gitignore  .project  CMakeLists.txt  ChangeLog.txt  copying.txt  install.txt  modules.cmake  readme.txt
pelican/adapters/: AbstractAdapter.h  AbstractServiceAdapter.h  AbstractStreamAdapter.h  AdapterAntennaList.h  AdapterFactory.h  AdapterLofarStationVisibilities.h  AdapterRealData.h  CMakeLists.txt  readme.txt
pelican/cmake/: .gitignore  CopyFiles.cmake  DoxyfileAPI.in  DoxyfileCode.in  DoxyfileDeveloper.in  DoxyfileUser.in  DoxyfileUser18.in  FindCFitsio.cmake  FindCppUnit.cmake  FindFFTW3.cmake  FindMKL.cmake  FindOpenMP.cmake  FindPelican.cmake  FindPelicanInstall.cmake  FindQt4.cmake  MathLibraries.cmake  UseDoxygen.cmake  build_macros.cmake  compilerDefaults.cmake  compiler_settings.cmake  config.h.in  copy_files.cmake  dependencies.cmake  packagemacros.cmake  packagemacrosNew.cmake  packaging.cmake  pelican_version.h.in  projectLibrary.cmake  saveBuildConfig.cmake  subpackage.cmake
pelican/comms/: AbstractClientProtocol.h  AbstractProtocol.h  AcknowledgementRequest.h  CMakeLists.txt  Data.h  DataBlobResponse.h  DataChunk.h  DataSupportRequest.h  DataSupportResponse.h  PelicanClientProtocol.h  PelicanProtocol.h  ServerRequest.h  ServerResponse.h  ServiceDataRequest.h  ServiceDataResponse.h  StreamData.h  StreamDataRequest.h  StreamDataResponse.h
pelican/core/: AbstractAdapter.h  AbstractAdapterFactory.h  AbstractAdaptingDataClient.h  AbstractDataClient.h  AbstractModule.h  AbstractPipeline.h  AbstractServiceAdapter.h  AbstractStreamAdapter.h  AdapterRealData.h  CMakeLists.txt  DataBlobAdapter.h  DataClientFactory.h  DataTypes.h  DirectStreamDataClient.h  FileDataClient.h  ModuleFactory.h  OutputStreamer.h  PelicanServerClient.h  PipelineApplication.h  PipelineDriver.h  PipelineSwitcher.h  readme.txt
pelican/data/: AntennaMatrixData.h  AntennaPositions.h  ArrayData.h  CMakeLists.txt  CelestialData.h  CorrectedVisibilityData.h  DataBlob.h  DataBlobBuffer.h  DataBlobFactory.h  DataBlobVerify.h  DataRequirements.h  DataSpec.h  FlagTable.h  FrequencyList.h  ImageData.h  ModelVisibilityData.h  RealData.h  SiteData.h  TimeStreamData.h  Vector2.h  Vector3.h  VisibilityData.h  VisibilityPositions.h  readme.txt
pelican/doc/: API.doxy  CMakeLists.txt  CodeMain.doxy  DeveloperMain.doxy  UserMain.doxy  todo.txt
pelican/emulator/: AbstractEmulator.h  AbstractUdpEmulator.h  CMakeLists.txt  EmulatorDriver.h  RealUdpEmulator.h
pelican/examples/: AdapterExample.cpp  AdapterExample.h  CMakeLists.txt  ChunkerExample.cpp  ChunkerExample.h  DataBlobExample.cpp  DataBlobExample.h  DirectDataClientExample.cpp  DirectDataClientExample.h  EmulatorExample.cpp  EmulatorExample.h  ModuleExample.cpp  ModuleExample.h  OutputStreamExample.cpp  OutputStreamExample.h  PipelineExample.cpp  PipelineExample.h  SignalAmplifier.cpp  SignalAmplifier.h  SignalChunker.cpp  SignalChunker.h  SignalData.cpp  SignalData.h  SignalDataAdapter.cpp  SignalDataAdapter.h  SignalEmulator.cpp  SignalEmulator.h  SignalProcessingPipeline.cpp  SignalProcessingPipeline.h  mainPipelineExample.cpp  mainServerExample.cpp
pelican/modules/: AbstractModule.h  AstrometryFast.h  BasicFlagger.h  CMakeLists.txt  EmptyModule.h  ImageCombiner.h  ImageWriterFits.h  VisibilityPrinter.h  ZenithCalibrater.h  ZenithImagerDft.h  ZenithModelVisibilities.h  uvfitsLoader.h
pelican/output/: AbstractBlobServer.h  AbstractDataBlobClient.h  AbstractOutputStream.h  CMakeLists.txt  DataBlobChunker.h  DataBlobChunkerClient.h  DataBlobClient.h  DataBlobFile.h  DataBlobFileReader.h  DataBlobFileType.h  DataBlobRelay.h  OutputStreamManager.h  PelicanTCPBlobServer.h  Stream.h  TCPConnectionManager.h  ThreadedBlobServer.h  ThreadedClientImpl.h  ThreadedDataBlobClient.h
pelican/pipelines/: CMakeLists.txt  TestPipelineCalibrateImage.h  TestPipelineMultipleImages.h  TestPipelineRawImage.h  TestPipelineServer.h  TestPipelineVisibilityPrinter.h
pelican/server/: AbstractChunker.h  AbstractDataBuffer.h  AbstractLockable.h  AbstractLockableData.h  CMakeLists.txt  ChunkerClassGenerator.hpp  ChunkerFactory.h  ChunkerManager.h  DataBlobChunker.h  DataBuffer.h  DataBufferStatus.h  DataManager.h  DataReceiver.h  DirectoryWatchChunker.h  FileChunker.h  LockableServiceData.h  LockableStreamData.h  LockedData.h  PelicanPortServer.h  PelicanServer.h  PelicanTCPBlobServer.h  ServiceDataBuffer.h  Session.h  StreamDataBuffer.h  WritableData.h
pelican/testutils/: AbstractEmulator.h  AbstractUdpEmulator.h  CMakeLists.txt  ComplexUdpEmulator.h  EmulatorDriver.h  RealUdpEmulator.h  TestUdpChunker.h
pelican/utility/: AbstractFactory.h  CMakeLists.txt  CircularBufferIterator.hpp  ClientTestServer.h  Config.h  ConfigNode.h  ContiguousMemory.hpp  Factory.h  FactoryBase.h  FactoryConfig.h  FactoryGeneric.h  FactoryRegistrar.h  LockingCircularBuffer.hpp  PelicanTimeRecorder.h  SocketTester.h  TestConfig.h  TypeCounter.h  WatchedDir.h  WatchedFile.h  constants.h  memCheck.h  memoryCheckInterface.h  memoryTracer.h  pelicanTimer.h
pelican/viewer/: CMakeLists.txt  DataBlobWidget.h  DataBlobWidgetFactory.h  DataViewer.h
src/: .cproject  .gitignore  .project  AbstractAdapter.h  CMakeLists.txt  modules.cmake
src/adapters/: AbstractAdapter.h  AbstractServiceAdapter.h  AbstractStreamAdapter.h  AdapterAntennaList.h  AdapterFactory.h  AdapterFrequencyList.h  AdapterLofarStationVisibilities.h  CMakeLists.txt  FileAdapterLofarVisibilities.h  readme.txt
src/adpaters/: CMakeLists.txt
src/cmake/: CopyFiles.cmake  Doxyfile.in  DoxyfileCode.in  DoxyfileDeveloper.in  DoxyfileServer.in  DoxyfileUser.in  FindCBLAS.cmake  FindCppUnit.cmake  FindLAPACK.cmake  FindMKL.cmake  FindOpenMP.cmake  FindPackageHandleCompat.cmake  MathLibraries.cmake  UseDoxygen.cmake  packagemacros.cmake
src/comms/: AbstractClientProtocol.h  AbstractProtocol.h  AcknowledgementRequest.h  CMakeLists.txt  Data.h  PelicanClientProtocol.h  (+8 more)
(+949 files in other folders)
